2007-07-02  Hans Boehm <Hans.Boehm@hp.com>

	* mach_dep.c (GC_with_callee_saves_pushed): Don't use getcontext()
	on ARM/Linux.  Check getcontext() return value.

2007-06-29  Hans Boehm <Hans.Boehm@hp.com>

	* backgraph.c (per_object_func): Make argument types consistent.
	(GC_traverse_back_graph): Mark GC_deepest_obj.
	
2007-06-29  Hans Boehm <Hans.Boehm@hp.com>

	* finalize.c (GC_finalize): Change dl_size and fo_size to size_t.
	* os_dep.c (GC_win32_get_mem): Add GC_mem_top_down option.

2007-06-28  Hans Boehm <Hans.Boehm@hp.com>

	* doc/README.win32, doc/README, README.QUICK: Fix some of the worst
	anachronisms.
	* dyn_load.c: Partially support cygwin, but don't enable it yet.

2007-06-28  Hans Boehm <Hans.Boehm@hp.com>

	* Makefile.am: Use -no-undefined for libgc.
	* Makefile.in: Regenerate.
	* Makefile.direct: Document USE_PROC_FOR_LIBRARIES.
	* dyn_load.c (GC_register_map_entries): Rename prot_buf to prot
	consistently.
	* misc.c: Fix some WARN calls.  Move GC_is_initialized setting and
	GC_thr_init() call.
	* os_dep.c: Consistently use WARN where appropriate.
	* thread_local_alloc.c: Revert change to GC_WIN32_THREADS test.  Instead
	remove inappropriate pthread.h include.
	* doc/README.linux: Remove some anachronisms.

2007-06-23  Hans Boehm <Hans.Boehm@hp.com>

	* alloc.c: Also use GC_check_tls on non-Linux systems.
	* mallocx.c (GC_reclaim_generic): Remove bogus declaration.
	* include/private/gc_priv.h (GC_reclaim_generic): Declare correctly
	with prototype.

2007-06-19  Hans Boehm <Hans.Boehm@hp.com>

	* alloc.c (GC_adj_bytes_allocd): Avoid (long) casts, fix comment.
	(GC_print_heap_sects): Use size_t instead of unsigned long.
	* thread_local_alloc.c (GC_lookup_thread): Define in the correct
	context.
	* win32_threads.c, include/gc_config_macros.h: The last of Romano
	Paolo Tenca's patch.  Move stdint.h include to gc_config_macros.h.
	* include/gc_inline.h: Avoid gc_priv.h dependencies.